generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum WorkspaceRole {
  OWNER
  ADMIN
  MEMBER
}

enum ActivityType {
  BOARD_CREATED
  COLUMN_CREATED
  CARD_CREATED
  CARD_MOVED
  CARD_UPDATED
  MEMBER_INVITED
}

model User {
  id           String            @id @default(uuid()) @db.Uuid
  name         String
  email        String            @unique
  passwordHash String            @map("password_hash")
  createdAt    DateTime          @default(now()) @map("created_at")
  updatedAt    DateTime          @updatedAt @map("updated_at")
  memberships  WorkspaceMember[]
  ownedSpaces  Workspace[]       @relation("WorkspaceOwner")
  assignedCards Card[]           @relation("CardAssignee")
  activities   ActivityEvent[]   @relation("ActivityActor")

  @@map("users")
}

model Workspace {
  id        String            @id @default(uuid()) @db.Uuid
  name      String
  slug      String            @unique
  ownerId   String            @map("owner_id") @db.Uuid
  owner     User              @relation("WorkspaceOwner", fields: [ownerId], references: [id], onDelete: Cascade)
  members   WorkspaceMember[]
  boards    Board[]
  invites   Invite[]
  createdAt DateTime          @default(now()) @map("created_at")
  updatedAt DateTime          @updatedAt @map("updated_at")

  @@map("workspaces")
}

model WorkspaceMember {
  id          String        @id @default(uuid()) @db.Uuid
  workspaceId String        @map("workspace_id") @db.Uuid
  userId      String        @map("user_id") @db.Uuid
  role        WorkspaceRole @default(MEMBER)
  joinedAt    DateTime      @default(now()) @map("joined_at")
  workspace   Workspace     @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user        User          @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, userId])
  @@index([userId])
  @@map("workspace_members")
}

model Board {
  id          String          @id @default(uuid()) @db.Uuid
  workspaceId String          @map("workspace_id") @db.Uuid
  title       String
  columns     Column[]
  activities  ActivityEvent[]
  workspace   Workspace       @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @updatedAt @map("updated_at")

  @@index([workspaceId])
  @@map("boards")
}

model Column {
  id        String   @id @default(uuid()) @db.Uuid
  boardId   String   @map("board_id") @db.Uuid
  title     String
  position  Int
  cards     Card[]
  board     Board    @relation(fields: [boardId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([boardId, position])
  @@index([boardId])
  @@map("columns")
}

model Card {
  id          String    @id @default(uuid()) @db.Uuid
  columnId    String    @map("column_id") @db.Uuid
  title       String
  description String?
  position    Int
  assigneeId  String?   @map("assignee_id") @db.Uuid
  column      Column    @relation(fields: [columnId], references: [id], onDelete: Cascade)
  assignee    User?     @relation("CardAssignee", fields: [assigneeId], references: [id], onDelete: SetNull)
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  @@unique([columnId, position])
  @@index([assigneeId])
  @@map("cards")
}

model Invite {
  id          String        @id @default(uuid()) @db.Uuid
  workspaceId String        @map("workspace_id") @db.Uuid
  email       String
  role        WorkspaceRole @default(MEMBER)
  tokenHash   String        @map("token_hash")
  expiresAt   DateTime      @map("expires_at")
  acceptedAt  DateTime?     @map("accepted_at")
  workspace   Workspace     @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdAt   DateTime      @default(now()) @map("created_at")

  @@index([workspaceId])
  @@index([email])
  @@map("invites")
}

model ActivityEvent {
  id        String       @id @default(uuid()) @db.Uuid
  boardId   String       @map("board_id") @db.Uuid
  actorId   String       @map("actor_id") @db.Uuid
  type      ActivityType
  metadata  Json
  board     Board        @relation(fields: [boardId], references: [id], onDelete: Cascade)
  actor     User         @relation("ActivityActor", fields: [actorId], references: [id], onDelete: Cascade)
  createdAt DateTime     @default(now()) @map("created_at")

  @@index([boardId, createdAt])
  @@map("activity_events")
}
